--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ script:
   - if [ -n "$stackid" ]; then until aws cloudformation describe-stacks --stack-name $stackid | grep -m 1 "DELETE_COMPLETE"; do sleep 10; done; fi
   - # Now test No Private Subnet
   - export TESTSTACKNAME="$TESTSTACKNAME-1"
-  - sed -i "s@true@$false@g" ci/solace-aws-ha-3az-prod-travistest.json
+  - sed -i "s@true@false@g" ci/solace-aws-ha-3az-prod-travistest.json
   - aws cloudformation create-stack --stack-name $TESTSTACKNAME --template-body file://templates/solace-master.template --parameters file://ci/solace-aws-ha-3az-prod-travistest.json --on-failure DO_NOTHING --capabilities CAPABILITY_IAM
   - echo "Waiting for stack create complete"
   - "travis_wait 30 sleep 1800 &"
